--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-fastapi==0.115.0
-uvicorn==0.32.0
-httpx==0.27.2
-itsdangerous==2.2.0
-python-dotenv==1.0.1
-PyNaCl==1.5.0
-python-multipart==0.0.17
-discord.py>=2.3.2
-jinja2==3.1.4
+fastapi>=0.68.0
+uvicorn>=0.15.0
+discord.py>=2.0.0
+httpx>=0.23.0
+jinja2>=3.0.0
+python-dotenv>=0.19.0
+itsdangerous>=2.0.0
