--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-discord.py>=2.0.0
-httpx>=0.23.0
-jinja2>=3.0.0
-python-dotenv>=0.19.0
-itsdangerous>=2.0.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+discord.py>=2.3.0
+httpx>=0.25.0
+jinja2>=3.1.0
+python-dotenv>=1.0.0
+itsdangerous>=2.1.0
+pydantic>=2.5.0
